tmp/blinko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blinko
  namespace: blinko-prod
  labels:
    app: blinko
spec:
  type: ClusterIP
  ports:
  - port: 1111
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: blinko
